# home-lab

./: CLAUDE.md  DECOMMISSION_SUMMARY.md  Discord-Bot-Creation-Instructions.md  Discord-Setup-Plan.md  HERMES-MIGRATION-PLAN.md  QUICKSTART_NETWORK_FIX.md  README.md  bot_invite_urls.txt  discord_config.json  get_conf_file.sh  requirements.txt  test_storage_pod.yml  update_lab_inventory.csv  update_vms_prompt.txt
ansible/: DEPLOYMENT_STATUS.md  README.md  add_encrypted_variable.sh  ansible.cfg  base_cluster.yml  clone_repos_agents.yml  cluster.yml  deploy_ssh_keys.yml  fan_control.yml  github_auth_agents.yml  hardware_inventory.yml  hermes_cluster.yml  install_cluster.sh  k8_accounts.yml  k8_accounts_reset.yml  k8_cluster.yml  k8_cluster_reset.sh  k8_cluster_reset.yml  k8_cluster_setup.sh  k8_dashboard.yml  kubernetes.yml  olympus_bus.yml  openclaw_cluster.yml  openclaw_cluster_reset.yml  passwd.yml  proxmox_cluster.yml  proxmox_cluster_reset.yml  proxmox_verify.yml  proxmox_vm_fix_network.yml  proxmox_vm_reboot.yml  proxmox_vm_set_spice.yml  pyproject.toml  regenerate_seed_isos.yml  reset.yml  reset_cluster.sh  reset_kubernetes.sh  reset_kubernetes.yml  run_ansible_role.sh  service_vms.yml  setup_kubernetes.sh  (+4 more)
ansible/.claude/checkpoints/: 2026-02-03-17-30-mattermost-upgrade-complete.md
ansible/.claude/context/: state.json
ansible/docs/: NETWORK_MIGRATION.md  SUDO_FIX_APPLIED.md
ansible/inventory/: hosts.yml
ansible/inventory/host_vars/: r420.infiquetra.com.yml  r640-1.infiquetra.com.yml  r640-2.infiquetra.com.yml  (+5 more)
ansible/tasks/: regenerate_seed_iso.yml
(+347 files in other folders)
